acvus-mir-test/tests/snapshots/e2e__string_emit.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = "hello"

=== main ===
     2 │   r0 = T0 + T1
     3 │   return r0

    ; r1 (v0) : String
    ; r2 (v1) : String
    ; r0 (v2) : String
