acvus-mir-test/tests/snapshots/e2e__string_equality_in_filter.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""
  T1 = ","
  T2 = "admin"

=== main ===
     0 │   r0 = context_project @names
     1 │   r1 = context_load r0
     3 │   r2 = poison
     4 │   r3 = closure L0 []
     5 │   r4 = poison
     7 │   r5 = T0 + T0
     9 │   r6 = poison
    10 │   r7 = r5 + r6
    11 │   return r7

    ; r0 (@names) : <error>
    ; r1 (v1) : List<String>
    ; r2 (iter(...)) : Iterator<String>
    ; r3 (v6) : Fn(String) -> Bool
    ; r4 (filter(...)) : Iterator<String>
    ; r5 (v9) : String
    ; r6 (join(...)) : String
    ; r7 (v13) : String
    ; r8 (v11) : String
    ; r9 (@names) : List<String>
    ; r10 (v14) : Iterator<String>
    ; r11 (v4) : List<String>
    ; r12 (x) : Iterator<String>
    ; r13 (v2) : String
    ; r14 (v8) : String

=== closure L0 (ValueId(0)) ===
     1 │   r0 = r1 != T2
     2 │   return r0

    ; r0 (v3) : Bool
    ; r1 (v0) : String
    ; r2 (n) : String
    ; r3 (v4) : String
    ; r4 (v2) : String
