acvus-mir-test/tests/snapshots/e2e__to_float_conversion.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @n
     1 │   r1 = context_load r0
     3 │   r2 = poison
     5 │   r3 = T0 + T0
     6 │   r4 = poison
     7 │   r5 = r3 + r4
     8 │   return r5

    ; r0 (@n) : <error>
    ; r1 (v1) : Int
    ; r2 (to_float(...)) : Float
    ; r3 (v7) : String
    ; r4 (to_string(...)) : String
    ; r5 (v10) : String
    ; r6 (@n) : Int
    ; r7 (v11) : Float
    ; r8 (v6) : String
    ; r9 (v2) : String
    ; r10 (x) : Float
    ; r11 (v4) : Int
