acvus-mir-test/tests/snapshots/e2e__triple_pipe_chain.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 │   r0 = context_load @items
     1 │   r1 = closure L0 []
     2 │   r2 = call filter(r0, r1)
     3 │   r3 = closure L1 []
     4 │   r4 = call map(r2, r3)
     5 │   r5 = closure L2 []
     6 │   r6 = call map(r4, r5)
     7 │   r7 = call len(r6)
     8 │   r8 = call to_string(r7)
     9 │   emit r8

    ; r0 (@items) : List<Int>
    ; r1 (v1) : Fn(Int) -> Bool
    ; r2 (filter(...)) : List<Int>
    ; r3 (v3) : Fn(Int) -> Int
    ; r4 (map(...)) : List<Int>
    ; r5 (v5) : Fn(Int) -> Int
    ; r6 (map(...)) : List<Int>
    ; r7 (len(...)) : Int
    ; r8 (to_string(...)) : String

=== closure L0 (i) ===
     0 │   r1 = const 0
     1 │   r2 = r0 != r1
     2 │   return r2

    ; r0 (v0) : Int
    ; r1 (v1) : Int
    ; r2 (v2) : Bool

=== closure L1 (i) ===
     0 │   r1 = const 1
     1 │   r2 = r0 + r1
     2 │   return r2

    ; r0 (v0) : Int
    ; r1 (v1) : Int
    ; r2 (v2) : Int

=== closure L2 (i) ===
     0 │   r1 = const 2
     1 │   r2 = r0 * r1
     2 │   return r2

    ; r0 (v0) : Int
    ; r1 (v1) : Int
    ; r2 (v2) : Int
