acvus-mir-test/tests/snapshots/e2e__tuple_expression.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = undef
     1 │   r1 = undef
     2 │   r2 = context_project @a
     3 │   r3 = context_load r2
     4 │   r4 = context_project @b
     5 │   r5 = context_load r4
     7 │   r6 = tuple (r3, r5)
     8 │ L2:
    10 │   r7 = r6.0
    12 │   r8 = true (r9) && true (r10)
    13 │   r11 = r6.1
    15 │   r12 = r8 && true (r13)
    16 │   jump_if r12 then L3 else L1
    17 │ L3:
    18 │   r14 = r6.0
    19 │   r15 = r6.1
    21 │   r16 = call #0(r14)
    22 │   r17 = T0 + r16
    23 │   r18 = r17 + r15
    24 │   jump L0(r18, r14, r15)
    25 │ L1:
    27 │   jump L0(T0, r0, r1)
    28 │ L0(r19: String, r20: Int, r21: String):  ; merge_of L2
    29 │   r22 = T0 + r19
    30 │   return r22

    ; r0 (v29) : Int
    ; r1 (v30) : String
    ; r2 (@a) : Int
    ; r3 (v2) : Int
    ; r4 (@b) : String
    ; r5 (v4) : String
    ; r6 (v10) : (Int, String)
    ; r7 (v12) : Int
    ; r8 (v14) : Bool
    ; r9 (v11) : Bool
    ; r10 (v13) : Bool
    ; r11 (v15) : String
    ; r12 (v17) : Bool
    ; r13 (v16) : Bool
    ; r14 (a) : Int
    ; r15 (b) : String
    ; r16 (to_string(...)) : String
    ; r17 (v23) : String
    ; r18 (v25) : String
    ; r19 (v27) : String
    ; r20 (v31) : Int
    ; r21 (v32) : String
    ; r22 (v28) : String
    ; r23 (@a) : Int
    ; r24 (v9) : String
    ; r25 (v20) : String
    ; r26 (a) : Int
    ; r27 (b) : String
    ; r28 (v5) : String
    ; r29 (@b) : String
    ; r30 (v26) : String
    ; r31 (v7) : Int
