acvus-mir-test/tests/snapshots/e2e__tuple_nested_destructure.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @data
     1 │   r1 = context_load r0
     3 │ L2:
     5 │   r2 = r1.0
     7 │   r3 = true (r4) && true (r5)
     8 │   r6 = r1.1
    10 │   r7 = test has_key(r6, "x")
    11 │   r8 = r6.x
    13 │   r9 = true (r10) && true (r11)
    14 │   r12 = r3 && r9
    15 │   jump_if r12 then L3 else L1
    16 │ L3:
    17 │   r13 = r1.0
    18 │   r14 = r1.1
    19 │   r15 = r14.x
    21 │   r16 = T0 + r13
    22 │   jump L0(r16, r15, r13)
    23 │ L1:
    25 │   jump L0(T0, r17, r18)
    26 │ L0(r19: String, r20: Int, r21: String):  ; merge_of L2
    27 │   r22 = T0 + r19
    28 │   return r22

    ; r0 (@data) : <error>
    ; r1 (v1) : (String, {x: Int})
    ; r2 (v6) : String
    ; r3 (v8) : Bool
    ; r4 (v5) : Bool
    ; r5 (v7) : Bool
    ; r6 (v9) : {x: Int}
    ; r7 (v11) : Bool
    ; r8 (v12) : Int
    ; r9 (v14) : Bool
    ; r10 (v10) : Bool
    ; r11 (v13) : Bool
    ; r12 (v15) : Bool
    ; r13 (label) : String
    ; r14 (v17) : {x: Int}
    ; r15 (x) : Int
    ; r16 (v21) : String
    ; r17 (v25) : Int
    ; r18 (v26) : String
    ; r19 (v23) : String
    ; r20 (v27) : Int
    ; r21 (v28) : String
    ; r22 (v24) : String
    ; r23 (v22) : String
    ; r24 (@data) : (String, {x: Int})
    ; r25 (label) : String
    ; r26 (v2) : String
    ; r27 (v4) : (String, {x: Int})
    ; r28 (v19) : String
