acvus-mir-test/tests/snapshots/e2e__tuple_pattern_literal_match.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = "zero-one"
  T1 = "one-any"
  T2 = "other"

=== main ===
     0 │   r0 = context_load @a
     1 │   r1 = context_load @b
     2 │   r2 = tuple (r0, r1)
     3 │ L2:
     5 │   r4 = r2.0
     6 │   r5 = test r4 == 0
     7 │   r6 = true (r3) && r5
     8 │   r7 = r2.1
     9 │   r8 = test r7 == 1
    10 │   r9 = r6 && r8
    11 │   jump_if r9 then L4 else L3
    12 │ L4:
    13 │   r10 = r2.0
    14 │   r11 = r2.1
    16 │   yield T0
    17 │   jump L0
    18 │ L3:
    20 │   r14 = r2.0
    21 │   r15 = test r14 == 1
    22 │   r16 = true (r13) && r15
    23 │   jump_if r16 then L5 else L1
    24 │ L5:
    25 │   r17 = r2.0
    27 │   yield T1
    28 │   jump L0
    29 │ L1:
    31 │   yield T2
    32 │ L0:  ; merge_of L2

    ; r0 (@a) : Int
    ; r1 (@b) : Int
    ; r2 (v2) : (Int, Int)
    ; r3 (v3) : Bool
    ; r4 (v4) : Int
    ; r5 (v5) : Bool
    ; r6 (v6) : Bool
    ; r7 (v7) : Int
    ; r8 (v8) : Bool
    ; r9 (v9) : Bool
    ; r10 (v10) : Int
    ; r11 (v11) : Int
    ; r12 (v12) : String
    ; r13 (v13) : Bool
    ; r14 (v14) : Int
    ; r15 (v15) : Bool
    ; r16 (v16) : Bool
    ; r17 (v17) : Int
    ; r18 (v18) : String
    ; r19 (v19) : String
