acvus-mir-test/tests/snapshots/e2e__tuple_pattern_wildcard.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 │   r0 = context_project @pair
     1 │   r1 = context_load r0
     3 │ L2:
     5 │   r2 = r1.0
     7 │   r3 = true (r4) && true (r5)
     8 │   jump_if r3 then L3 else L1
     9 │ L3:
    10 │   r6 = r1.0
    12 │   r7 = T0 + r6
    13 │   jump L0(r7)
    14 │ L1:
    16 │   jump L0(T0)
    17 │ L0(r8: String):  ; merge_of L2
    18 │   r9 = T0 + r8
    19 │   return r9

    ; r0 (@pair) : <error>
    ; r1 (v1) : (String, Int)
    ; r10 (v2) : String
    ; r11 (@pair) : (String, Int)
    ; r12 (v4) : (String, Int)
    ; r4 (v5) : Bool
    ; r2 (v6) : String
    ; r5 (v7) : Bool
    ; r3 (v8) : Bool
    ; r6 (name) : String
    ; r13 (v10) : String
    ; r7 (v11) : String
    ; r14 (v12) : String
    ; r8 (v13) : String
    ; r9 (v14) : String
